--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-            <meta>
+   
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial scale=1.0">
   <title>Bikcraft</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -11,7 +12,7 @@
 <body>
 
   <header class="header">
-    <img src="./img/bikcraft.svg" alt="Bikcraft">
+    <img class="bikcraft" src="./img/bikcraft.svg" alt="Bikcraft">
 
     <nav aria-label="primária">
       <ul class="menu">
